@@ -35,3 +35,23 @@ Example:
 ```sh
 bazelisk test plugins/cache-chroniclemap/...
 ```
+
+## Run tests in IDE
+
+The cache-chroniclemap internals are JDK 17 compatible however JDK since that
+version is more restrictive on which modules are by default accessible to the
+third party libraries. Considering that, in order to run tests in IDE (e.g.
+Eclipse), one needs to add the following VM arguments to the particular test's
+_Debug/Run Configuration_:
+
+```
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+```
